dev-animation: Added z-index to ensure contact is on top

--- a/code/src/components/nav/navbar.scss
+++ b/code/src/components/nav/navbar.scss
@@ -177,6 +177,7 @@ nav {
   left: auto;
   right: 3rem;
   width: 40px;
+  z-index: 1000;
   writing-mode: vertical-lr;
 
   &::after {
